tests/compile-fail/serde_deserialize_owned_check.stderr
error[E0106]: missing lifetime specifier
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:45
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  |                                             ^ expected named lifetime parameter
  |

error: in the trait associated type is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:45
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  |                                             ^ this lifetime must come from the implemented type

error[E0637]: `&` without an explicit lifetime name cannot be used here
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:45
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  |                                             ^ explicit lifetime name needed here
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `alloc`
 --> tests/compile-fail/serde_deserialize_owned_check.rs:3:1
  |
3 | serializable_dynamic_alias!(pub TestSecret, &str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `alloc`
  |
  = help: add `extern crate alloc` to use the `alloc` crate
  = note: this error originates in the macro `serializable_dynamic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these modules
  |
1 + use std::string;
  |
1 + use proptest::string;
  |
